Fix release version build - Fix dependency build via https://github.com/adazzle/react-data-grid/issues/675#issuecomment-308442896 - Remove package from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ lib
 test/reports
 test/coverage
 dist
+!packages/react-data-grid/dist
+!packages/react-data-grid-addons/dist
 .npmrc
 npm-debug.log
 **.orig
